# notifications

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  _user_info.py  docker-compose.override.yml  docker-compose.tests.yml  docker-compose.yml  example.env  manager.py  pyproject.toml  setup.cfg  uml.plantuml
.github/workflows/: checks.yml
ELK/: docker-compose.yml
ELK/deploy/: logstash.conf
admin_panel/src/: entrypoint.sh  manage.py  requirements.txt
admin_panel/src/config/: settings.py  urls.py
admin_panel/src/notifications/: admin.py  models.py
admin_panel/src/notifications/migrations/: 0001_initial.py
api/v1/admin_panel/: Dockerfile  pyproject.toml
api/v1/admin_panel/admin_panel/: celery.py  settings.py
api/v1/admin_panel/admin_panel/components/: _apps_middleware.py
api/v1/admin_panel/locale/ru/LC_MESSAGES/: django.po
api/v1/admin_panel/notifications/: mixins.py  models.py
api/v1/admin_panel/panel/: admin.py  models.py
api/v1/admin_panel/templates/film_promo/: Film_promo.html
api/v1/admin_panel/templates/welcome/: Welcome.html  styles.css
api/v1/admin_panel/uwsgi/: uwsgi.ini
app/src/: alembic.ini  entrypoint.sh  main.py
app/src/api/v1/: notific.py  notification.py
app/src/core/: config.py
app/src/migrations/: env.py
app/src/migrations/versions/: a7dbf5d8396a_init_migration.py
app/src/service/: admin.py  broker.py  review.py  user.py
app/src/tools/: broker.py  notification_storage.py
app/src/utils/: broker.py  notification_storage.py
app/tests/functional/: config.py  conftest.py
app/tests/functional/src/: test_notifications.py
configs/: site.conf
db/: base.py
docs/: new_film_notification.drawio  new_film_notification_v2.drawio  notification.drawio
generator/models/: notifications.py  ugc.py  user.py
generators/: generator_status.json  review.py
mock/admin_panel/: config.py  main.py  models.py  utils.py
mock/auth/: Dockerfile  config.py  main.py  middleware.py  models.py  utils.py
mock/ugc/: config.py  main.py  pyproject.toml  utils.py
models/: content.py  notification.py  subscription.py  user.py
nginx/: nginx.conf
nginx/configs/: django.conf  fastapi.conf  notific_api.conf  site.conf
scheme/: notification.drawio
sender/: Dockerfile  pyproject.toml
sender/settings/: __init__.py  config.py
sender/v1/workers/: mail_worker.py  rabbit_worker.py  websocket_worker.py
services/admin_panel/: Dockerfile  manage.py  pyproject.toml  run.sh
services/admin_panel/admin_panel/: celery.py  settings.py  urls.py
services/admin_panel/admin_panel/components/: __init__.py  _database.py
services/admin_panel/core/: config.py
services/admin_panel/notifications/: admin.py  mixins.py  models.py  tasks.py
services/admin_panel/notifications/migrations/: 0001_initial.py  0002_alter_template_options_alter_template_created_and_more.py  0003_template_template_files.py  0004_template_template_short_description_and_more.py  (+5 more)
services/admin_panel/shell_scripts/: entrypoint_admin_panel.sh  entrypoint_beat.sh  entrypoint_worker.sh
services/admin_panel/uwsgi/: uwsgi.ini
services/enricher/: Dockerfile  pyproject.toml
services/enricher/src/: main.py
services/generator/models/: notifications.py  user.py
services/notific_api/: Dockerfile  pyproject.toml  requirements.txt
services/notific_api/src/: main.py
services/sender/: Dockerfile  main.py  pyproject.toml  rabbit.py
services/sender/broker/: consumer.py  rabbit.py
services/sender/core/: config.py
services/sender/db/: redis.py
services/sender/migrations/: env.py
services/sender/models/: __init__.py  notifications.py
services/url_shortener/: Dockerfile  pyproject.toml  run.sh
services/url_shortener/blueprints/: routes.py
services/url_shortener/core/: config.py
services/url_shortener/migrations/versions/: bab7cf136960_.py  c7ef1bc3681c_.py
services/url_shortener/models/: shorturls.py
services/url_shortener/shortener_service/: __init__.py  wsgi_app.py
services/url_shortener/uwsgi/: uwsgi.ini
settings/: config.py
templates/: custom_mail_2023-01-10T21:52:40.441458.html  example.html  new_episode.html  review.html
utils/: get_user_info.py  users.py
worker/src/: main.py
worker/src/core/: config.py
worker/src/service/: consumer.py  sender.py  worker.py
workers/src/: episode_worker.py  message_worker.py  review_worker.py  welcome_worker.py
workers/src/core/: config.py
workers/src/service/: __init__.py  consumer.py  db_service.py  episode.py  message.py  review.py  sender.py  welcome.py
workers/src/templates/: new_user.html
(+80 files in other folders)
