[tool.poetry]
name = "notifications_sprint_1"
version = "0.1.0"
description = ""
authors = ["GA10"]

[tool.poetry.dependencies]
python = "^3.10"
backoff = "^2.2.1"
fastapi = "0.88.0"
asyncio = "^3.4.3"
uvicorn = "0.15.0"
PyJWT = "^2.6.0"
orjson = "3.8.3"
pydantic = "1.10.2"
python-logstash = "^0.4.8"
sentry-sdk = "^1.12.0"
Faker = "^15.3.4"
pika = "1.3.1"
aio-pika = "8.3.0"
Jinja2 = "^3.1.2"
aiormq = "6.6.3"
aiosqlite = "0.18.0"
anyio = "3.6.2"
asgiref = "3.6.0"
asyncpg = "0.27.0"
click = "8.1.3"
greenlet = "2.0.1"
h11 = "0.14.0"
httptools = "0.2.0"
idna = "3.4"
multidict = "6.0.4"
pamqp = "3.2.1"
psycopg2-binary = "2.9.5"
python-dotenv = "0.21.0"
pyyaml = "6.0"
sniffio = "1.3.0"
sqlalchemy = "1.4.3"
starlette = "0.22.0"
typer = "0.7.0"
typing-extensions = "4.4.0"
uvloop = "0.17.0"
watchgod = "0.8.2"
websockets = "10.4"
yarl = "1.8.2"
requests = "^2.28.1"
connection = "^2021.7.20"
django = "3.2"
django-json-widget = "^1.1.1"
gunicorn = "^20.1.0"



[tool.poetry.dev-dependencies]
flake8-bugbear = "^22.6.22"
flake8-commas = "^2.1.0"
flake8-comprehensions = "^3.10.0"
flake8-eradicate = "^1.3.0"
flake8-pie = "^0.16.0"
flake8-print = "^5.0.0"
flake8-quotes = "^3.3.1"
flake8-simplify = "^0.19.2"
flake8-variables-names = "^0.0.5"
pre-commit = "^2.19.0"
dlint = "^0.13.0"
black = "^22.6.0"
isort = "^5.10.1"
yesqa = "^1.4.0"
flake8 = "^5.0.4"
pytest = "^7.1.2"
pytest-asyncio = "^0.19.0"
aiohttp = "^3.8.1"
flake8-html = "^0.4.3"


[tool.black]
line-length = 120
target-version = ["py38"]
include = '\.pyi?$'
skip-string-normalization = true
exclude = '''
(
  /(
      \.venv
    | \.git
    | \.env
  )/
)
'''

[tool.isort]
multi_line_output = 3
line_length = 120
include_trailing_comma = true

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
